# EAWE-Data-Science-Challenge-2024

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SUMMARY.md  challenge-description.md  data-set-bjorko-wind-turbine-version-1-45kw-scada.md  pyproject.toml
data-sets/: data-set-bjorko-wind-turbine-version-1-45kw-shm.md
models/: Sub-challenge-2_8_1.csv
solutions/: sarahs-solution-number-1.md
src/: wedowind_datachall-Q2.py
